Fixed the spacing situation with the stories😉

--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,8 @@ header .container li a:hover {
 .stories article{
     margin: 2rem 0;
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 2rem;
     align-items: center;
 }
 
@@ -153,7 +154,6 @@ header .container li a:hover {
     height: 220px;
     border-radius: 50%;
     object-fit: cover;
-    justify-self: center;
 }
 
 .stories h3 {
